--- a/index.html
+++ b/index.html
@@ -80,14 +80,9 @@
         <div class="col-md-7">
           <h3>About Me</h3>
           <p>
-            I'm Mohammed Hajahmed a Front End Web Developer living in Toronto, Ontario, Canada. I’m extremely passionate about web development
-            and design.I naturally enjoy building things up from scratch and making them work. I can't describe how joyful
-            it was the first time I typed "hello world" in HTML. The excitement fueled me to keep learning and creating till
-            today. The journey itself is not easy but most importantly I’m enjoying the process.
-            <p>
-              I also enjoy writing clean code while developing front-end in HTML, CSS, JavaScript and React. I make responsive websites
-              that work perfectly on any device and browser creating a great user experience. I’m very excited about the
-              future. I’m looking for an exciting career with a lot of growth potential and working with likeminded developers.
+            I'm Mohammed Hajahmed a Front End Web Developer living in Toronto, Ontario, Canada.I  enjoy writing clean code while developing front-end in HTML, CSS, JavaScript and React.
+            I make responsive websites that work perfectly on any device and browser creating a great user experience. I’m very excited about the
+            future. I’m looking for an exciting career with a lot of growth potential and working with likeminded developers.
 
             </p>
         </div>
