--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
             </span>
             <h4>JavaScript</h4>
           </div>
+          <div class="skill">
+            <span class="chart" data-percent="65">
+              <span class="percent">65</span>
+              <canvas height="152" width="152"> </canvas>
+            </span>
+            <h4>React.js</h4>
+          </div>
         </div>
       </div>
     </div>
